# uv_dab

./: .gitignore  README.md  databricks.yml  pyproject.toml
resources/: uv_dab_dlt.yml  uv_dab_job.yml
src/uv_dab/: constants.py  dlt.ipynb  ingestion.py
src/uv_dab/low_level_functions/: utils.py
tests/: conftest.py
tests/unit/: test_low_level_functions.py
